Texts & ios background fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <script src="https://www.google.com/recaptcha/api.js?render=6LcV2OMZAAAAADkO9uYTHQhJ4CjWd4QFPQJExfqA"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6Lf2m-kZAAAAAMM7Zr9v95WegYnOH-x2gSIqIl-J"></script>
 
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/flickity.css">
@@ -75,7 +75,7 @@
                         <div class="hero__benefits">
                             <div class="hero__benefit">Снижение себестоимости продукции</div>
                             <div class="hero__benefit">Улучшение органолептических качеств продукции</div>
-                            <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
+                            <div class="hero__benefit">Повышение эффективности технологических процессов</div>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-4 col-sm-5">
@@ -110,7 +110,7 @@
                     <div class="use__category col-lg-6">
                         <div class="subtitle">Глюкозно-фруктозные сиропы</div>
                         <div class="use__description">
-                            Используются как для полной, так и для частичной замены патоки, сахара, инверта,
+                            Используются как для полной, так и для частичной замены патоки, сахара, инвертного сиропа,
                             искусственного меда.<br>
                             Это более доступная и естественная замена привычным консервантам.
                         </div>
@@ -120,7 +120,7 @@
                                     <img src="images/use/juice.svg" alt="">
                                 </div>
                                 <div class="use__caption">
-                                    Соки, безалкогольные напитки (газированные напитки, сладкие воды, квас и пр.). <br>Коктейли (безалкогольные, алкогольные).<br>Алкогольные напитки (пиво и пр.). <br>Соусы, кетчупы
+                                    Соки, безалкогольные напитки (газированные напитки, сладкие воды, квас и пр.). <br>Коктейли (безалкогольные, алкогольные).<br>Алкогольные напитки (пиво, сидры, пуаре, медовухи). <br>Соусы, кетчупы
                                 </div>
                             </div>
                             <div class="use__item">
@@ -136,7 +136,7 @@
                                     <img src="images/use/candy.svg" alt="">
                                 </div>
                                 <div class="use__caption">
-                                    Глазурь, помада, конфеты, зефир, жевательные резнки, пастила, мармелад, маршмеллоу
+                                    Глазурь, помада, конфеты, зефир, жевательные резинки, пастила, мармелад, маршмеллоу
                                 </div>
                             </div>
                             <div class="use__item">
@@ -183,7 +183,7 @@
                 <div class="category container" id="syrup-category">
                     <div class="row align-items-start align-items-lg-center">
                         <div class="col-md-6 order-1 order-md-0">
-                            <h2 class="title">ГФС-42, ГФС-55</h2>
+                            <h2 class="title">ГФС-42, ГФС-55, КФП (ГФС-70)</h2>
                             <div class="category__subtitle subtitle">Глюкозно-фруктозный сироп</div>
                             <div class="category__description">
                                 Сахара природного происхождения, полученные из пшеницы. Сиропы однородны и прозрачны,
@@ -193,8 +193,8 @@
                                 <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
                                     Презентация глюкозно-фруктозных сиропов
                                 </a>
-                                <a href="#" class="category__link" target="_blank">
-                                    Сертификация ГФС-42, ГФС-55
+                                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                                    Сертификация ГФС-42, ГФС-55, КФП (ГФС-70)
                                 </a>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class="category__advantages">
-                        <div class="subtitle">Преимущества использования ГФС-45, ГФС-55</div>
+                        <div class="subtitle">Преимущества использования ГФС-42, ГФС-55, КФП (ГФС-70)</div>
                         <div class="category__tabs list-group" role="tablist">
                             <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab" aria-controls="syrup-cost-price">
                                 Для себестоимости
@@ -371,8 +371,8 @@
                                 необходимое пенообразование.
                             </div>
                             <div class="category__links">
-                                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
-                                <a href="downloads/silicagel-certificate.pdf" class="category__link">Сертификат безопасности</a>
+                                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link">Презентация силикагелевых стабилизаторов</a>
+                                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link">Сертификат безопасности</a>
                             </div>
                         </div>
                         <div class="col-md-6 order-0 order-md-1">
