--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -10,7 +10,7 @@
                 <div class="hero__benefits">
                     <div class="hero__benefit">Снижение себестоимости продукции</div>
                     <div class="hero__benefit">Улучшение органолептических качеств продукции</div>
-                    <div class="hero__benefit">Технологическая поддержка в ведении производственного процесса</div>
+                    <div class="hero__benefit">Повышение эффективности технологических процессов</div>
                 </div>
             </div>
             <div class="col-lg-5 col-md-4 col-sm-5">
