--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -10,8 +10,8 @@
                 необходимое пенообразование.
             </div>
             <div class="category__links">
-                <a href="#" class="category__link">Презентация силикагелевых стабилизаторов</a>
-                <a href="downloads/silicagel-certificate.pdf" class="category__link">Сертификат безопасности</a>
+                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link">Презентация силикагелевых стабилизаторов</a>
+                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link">Сертификат безопасности</a>
             </div>
         </div>
         <div class="col-md-6 order-0 order-md-1">
