--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -1,7 +1,7 @@
 <div class="category container" id="syrup-category">
     <div class="row align-items-start align-items-lg-center">
         <div class="col-md-6 order-1 order-md-0">
-            <h2 class="title">ГФС-42, ГФС-55</h2>
+            <h2 class="title">ГФС-42, ГФС-55, КФП (ГФС-70)</h2>
             <div class="category__subtitle subtitle">Глюкозно-фруктозный сироп</div>
             <div class="category__description">
                 Сахара природного происхождения, полученные из пшеницы. Сиропы однородны и прозрачны,
@@ -11,8 +11,8 @@
                 <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
                     Презентация глюкозно-фруктозных сиропов
                 </a>
-                <a href="#" class="category__link" target="_blank">
-                    Сертификация ГФС-42, ГФС-55
+                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                    Сертификация ГФС-42, ГФС-55, КФП (ГФС-70)
                 </a>
             </div>
         </div>
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="category__advantages">
-        <div class="subtitle">Преимущества использования ГФС-45, ГФС-55</div>
+        <div class="subtitle">Преимущества использования ГФС-42, ГФС-55, КФП (ГФС-70)</div>
         <div class="category__tabs list-group" role="tablist">
             <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab"
                aria-controls="syrup-cost-price">
