--- a/src/html/blocks/use.html
+++ b/src/html/blocks/use.html
@@ -9,7 +9,7 @@
             <div class="use__category col-lg-6">
                 <div class="subtitle">Глюкозно-фруктозные сиропы</div>
                 <div class="use__description">
-                    Используются как для полной, так и для частичной замены патоки, сахара, инверта,
+                    Используются как для полной, так и для частичной замены патоки, сахара, инвертного сиропа,
                     искусственного меда.<br>
                     Это более доступная и естественная замена привычным консервантам.
                 </div>
