Several minor changes

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <div class="subtitle">Преимущества использования ГФС-42, ГФС-55, КФП (ГФС-70)</div>
                         <div class="category__tabs list-group" role="tablist">
                             <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab" aria-controls="syrup-cost-price">
-                                Для себестоимости
+                                Для снижения себестоимости
                             </a>
                             <a class="category__tab" data-toggle="list" href="#syrup-production" role="tab" aria-controls="syrup-production">
                                 Для производства
@@ -371,8 +371,15 @@
                                 необходимое пенообразование.
                             </div>
                             <div class="category__links">
-                                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link">Презентация силикагелевых стабилизаторов</a>
-                                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link">Сертификат безопасности</a>
+                                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link">
+                                    Презентация силикагелевых стабилизаторов для сельского хозяйства
+                                </a>
+                                <a href="downloads/bris-presentation-vine-and-beer.pdf" target="_blank" class="category__link">
+                                    Презентация силикагелевых стабилизаторов для вина и пива
+                                </a>
+                                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link">
+                                    Сертификат безопасности
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-6 order-0 order-md-1">
@@ -559,7 +566,7 @@
         <div class="modal" id="modal-success">
             <img src="images/modal/icon-ok.svg" class="modal__icon" alt="">
             <div class="modal__title">Спасибо,<br>ваша заявка принята.</div>
-            <div class="modal__subtitle">В ближайшее время мы свяжется с вами.</div>
+            <div class="modal__subtitle">В ближайшее время мы свяжемся с вами.</div>
         </div>
 
         <div class="modal" id="modal-error">
