--- a/src/html/blocks/modal.html
+++ b/src/html/blocks/modal.html
@@ -1,7 +1,7 @@
 <div class="modal" id="modal-success">
     <img src="images/modal/icon-ok.svg" class="modal__icon" alt="">
     <div class="modal__title">Спасибо,<br>ваша заявка принята.</div>
-    <div class="modal__subtitle">В ближайшее время мы свяжется с вами.</div>
+    <div class="modal__subtitle">В ближайшее время мы свяжемся с вами.</div>
 </div>
 
 <div class="modal" id="modal-error">
