--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -25,7 +25,7 @@
         <div class="category__tabs list-group" role="tablist">
             <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab"
                aria-controls="syrup-cost-price">
-                Для себестоимости
+                Для снижения себестоимости
             </a>
             <a class="category__tab" data-toggle="list" href="#syrup-production" role="tab"
                aria-controls="syrup-production">
