--- a/src/html/blocks/head.html
+++ b/src/html/blocks/head.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/bootstrap-grid.min.css">
         <link rel="stylesheet" href="css/flickity.css">
         <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css?v=1.0.1">
 
         <title>Биотэр</title>
     </head>
