--- a/src/html/blocks/hero-categories.html
+++ b/src/html/blocks/hero-categories.html
@@ -3,14 +3,18 @@
         <img src="images/hero-category/syrup.png" class="hero-category__image" alt="">
         <div class="hero-category__card">
             Глюкозно-фруктозные сиропы (ГФС-42, ГФС-55)
-            <a href="#syrup-category" class="hero-category__anchor">Подробнее</a>
+            <a href="#syrup-category" class="hero-category__anchor" onclick="ym(71579686,'reachGoal','interes_gfs')">
+                Подробнее
+            </a>
         </div>
     </div>
     <div class="hero-category hero-category_second">
         <img src="images/hero-category/silicagel.png" class="hero-category__image" alt="">
         <div class="hero-category__card hero-category__card_centered">
             Стабилизаторы для пивоварения и виноделия (силикагелевые)
-            <a href="#silicagel-category" class="hero-category__anchor">Подробнее</a>
+            <a href="#silicagel-category" class="hero-category__anchor" onclick="ym(71579686,'reachGoal','interes_silik')">
+                Подробнее
+            </a>
         </div>
     </div>
 </div>
