--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -10,13 +10,16 @@
                 необходимое пенообразование.
             </div>
             <div class="category__links">
-                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link">
+                <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link"
+                   onclick="ym(71579686,'reachGoal','down_silik')">
                     Презентация силикагелевых стабилизаторов для сельского хозяйства
                 </a>
-                <a href="downloads/bris-presentation-vine-and-beer.pdf" target="_blank" class="category__link">
+                <a href="downloads/bris-presentation-vine-and-beer.pdf" target="_blank" class="category__link"
+                   onclick="ym(71579686,'reachGoal','down_silik')">
                     Презентация силикагелевых стабилизаторов для вина и пива
                 </a>
-                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link">
+                <a href="downloads/silicagel-certificate.pdf" target="_blank" class="category__link"
+                   onclick="ym(71579686,'reachGoal','down_silik')">
                     Сертификат безопасности
                 </a>
             </div>
@@ -29,11 +32,11 @@
         <div class="subtitle">Применение силикагелевых стабилизаторов</div>
         <div class="category__tabs list-group" role="tablist">
             <a class="category__tab active" data-toggle="list" href="#silicagel-brewing" role="tab"
-               aria-controls="silicagel-brewing">
+               aria-controls="silicagel-brewing" onclick="ym(71579686,'reachGoal','interes_silik')">
                 Для пивоварения
             </a>
             <a class="category__tab" data-toggle="list" href="#silicagel-winemaking" role="tab"
-               aria-controls="silicagel-winemaking">
+               aria-controls="silicagel-winemaking" onclick="ym(71579686,'reachGoal','interes_silik')">
                 Для виноделия
             </a>
         </div>
