--- a/src/html/blocks/parts/category-syrup.html
+++ b/src/html/blocks/parts/category-syrup.html
@@ -8,10 +8,12 @@
                 нейтральны в аромате с интенсивно сладким вкусом без посторонних примесей.
             </div>
             <div class="category__links">
-                <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank">
+                <a href="downloads/gfs-presentation.pdf" class="category__link" target="_blank"
+                   onclick="ym(71579686,'reachGoal','down_gfs')">
                     Презентация глюкозно-фруктозных сиропов
                 </a>
-                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank">
+                <a href="downloads/gfs-certificate.pdf" class="category__link" target="_blank"
+                   onclick="ym(71579686,'reachGoal','down_gfs')">
                     Сертификация ГФС-42, ГФС-55, КФП (ГФС-70)
                 </a>
             </div>
@@ -24,15 +26,15 @@
         <div class="subtitle">Преимущества использования ГФС-42, ГФС-55, КФП (ГФС-70)</div>
         <div class="category__tabs list-group" role="tablist">
             <a class="category__tab active" data-toggle="list" href="#syrup-cost-price" role="tab"
-               aria-controls="syrup-cost-price">
+               aria-controls="syrup-cost-price" onclick="ym(71579686,'reachGoal','interes_gfs')">
                 Для снижения себестоимости
             </a>
             <a class="category__tab" data-toggle="list" href="#syrup-production" role="tab"
-               aria-controls="syrup-production">
+               aria-controls="syrup-production" onclick="ym(71579686,'reachGoal','interes_gfs')">
                 Для производства
             </a>
             <a class="category__tab" data-toggle="list" href="#syrup-products" role="tab"
-               aria-controls="syrup-products">
+               aria-controls="syrup-products" onclick="ym(71579686,'reachGoal','interes_gfs')">
                 Для продукции
             </a>
         </div>
