feat: Добавлены файлы analytics. Поправлен email в ссылке.

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="col-xl-6">
                                     <a href="tel:+79184694301" class="footer__phone">8 (918) 469-43-01</a>
-                                    <a href="mailto:da@biotr.ru" class="footer__email">office@biotr.ru</a>
+                                    <a href="mailto:office@biotr.ru" class="footer__email">office@biotr.ru</a>
                                 </div>
                             </div>
                         </div>
@@ -38,6 +38,8 @@
         <script src="js/axios.min.js"></script>
         <script src="js/vue-the-mask.min.js"></script>
         <script src="js/script.js"></script>
+
+        @@include('analytics_footer.html')
 
     </body>
 </html>
