--- a/index.html
+++ b/index.html
@@ -4,43 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
     <script src="https://www.google.com/recaptcha/api.js?render=6Lf2m-kZAAAAAMM7Zr9v95WegYnOH-x2gSIqIl-J"></script>
-
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/flickity.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css?v=1.0.1">
-
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m, e, t, r, i, k, a) {
-            m[i] = m[i] || function() {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-        ym(71579686, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/71579686" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-
     <title>Биотэр</title>
+
 </head>
 
 <body>
+
 
     <div class="site-container">
 
@@ -78,7 +53,7 @@
                                     </div>
                                     <div class="col-auto">
                                         <a href="tel:+79184694301" class="header__phone">8 (918) 469-43-01</a>
-                                        <a href="mailto:da@biotr.ru" class="header__email">office@biotr.ru</a>
+                                        <a href="mailto:office@biotr.ru" class="header__email">office@biotr.ru</a>
                                     </div>
                                 </div>
                             </div>
@@ -649,7 +624,7 @@
                             </div>
                             <div class="col-xl-6">
                                 <a href="tel:+79184694301" class="footer__phone">8 (918) 469-43-01</a>
-                                <a href="mailto:da@biotr.ru" class="footer__email">office@biotr.ru</a>
+                                <a href="mailto:office@biotr.ru" class="footer__email">office@biotr.ru</a>
                             </div>
                         </div>
                     </div>
@@ -668,6 +643,31 @@
     <script src="js/axios.min.js"></script>
     <script src="js/vue-the-mask.min.js"></script>
     <script src="js/script.js"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m, e, t, r, i, k, a) {
+            m[i] = m[i] || function() {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(71579686, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/71579686" style="position:absolute; left:-9999px;" alt="" /></div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+
+    <script type="text/javascript" src="//api.venyoo.ru/wnew.js?wc=venyoo/default/science&widget_id=6755342139789616"></script>
 
 </body>
 
