--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-auto">
                         <a href="tel:+79184694301" class="header__phone">8 (918) 469-43-01</a>
-                        <a href="mailto:da@biotr.ru" class="header__email">office@biotr.ru</a>
+                        <a href="mailto:office@biotr.ru" class="header__email">office@biotr.ru</a>
                     </div>
                 </div>
             </div>
