feat: Правки текста. Установка калибри.

--- a/src/html/blocks/analytics_footer.html
+++ b/src/html/blocks/analytics_footer.html
@@ -15,3 +15,4 @@
 <!-- /Yandex.Metrika counter -->
 
 <script type="text/javascript" src="//api.venyoo.ru/wnew.js?wc=venyoo/default/science&widget_id=6755342139789616"></script>
+<script src="//cdn.callibri.ru/callibri.js" type="text/javascript" charset="utf-8"></script>
