--- a/src/html/blocks/parts/category-silicagel.html
+++ b/src/html/blocks/parts/category-silicagel.html
@@ -3,8 +3,7 @@
         <div class="col-md-6 order-1 order-md-0">
             <h2 class="title">Силикагелевые стабилизаторы</h2>
             <div class="category__description">
-                Технологическое вспомогательное средство, участвующее в технологическом процессе,
-                Пищевая добавка Е 551, Стабилизаторы созданы таким образом, что физико-химические
+                Технологическое вспомогательное средство, участвующее в технологическом процессе. Стабилизаторы созданы таким образом, что физико-химические
                 параметры обеспечивают максимальную эффективность при стабилизации и избирательной
                 адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
                 необходимое пенообразование.
