--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                                         </button>
                                     </div>
                                     <div class="col-auto">
-                                        <a href="tel:+79184694301" class="header__phone">8 (918) 469-43-01</a>
+                                        <a href="tel:+79184694301" class="header__phone callibri">8 (918) 469-43-01</a>
                                         <a href="mailto:office@biotr.ru" class="header__email">office@biotr.ru</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-auto d-md-none">
-                                <a href="tel:+79184694301" class="d-flex">
+                                <a href="tel:+79184694301" class="d-flex callibri">
                                     <img src="images/header/phone-icon.svg" alt="">
                                 </a>
                             </div>
@@ -366,8 +366,7 @@
                         <div class="col-md-6 order-1 order-md-0">
                             <h2 class="title">Силикагелевые стабилизаторы</h2>
                             <div class="category__description">
-                                Технологическое вспомогательное средство, участвующее в технологическом процессе,
-                                Пищевая добавка Е 551, Стабилизаторы созданы таким образом, что физико-химические
+                                Технологическое вспомогательное средство, участвующее в технологическом процессе. Стабилизаторы созданы таким образом, что физико-химические
                                 параметры обеспечивают максимальную эффективность при стабилизации и избирательной
                                 адсорбции из пива (вина) белков, вызывающих «холодное» помутнение, а также сохраняют
                                 необходимое пенообразование.
@@ -623,7 +622,7 @@
                                 </button>
                             </div>
                             <div class="col-xl-6">
-                                <a href="tel:+79184694301" class="footer__phone">8 (918) 469-43-01</a>
+                                <a href="tel:+79184694301" class="footer__phone callibri">8 (918) 469-43-01</a>
                                 <a href="mailto:office@biotr.ru" class="footer__email">office@biotr.ru</a>
                             </div>
                         </div>
@@ -668,6 +667,7 @@
     <!-- /Yandex.Metrika counter -->
 
     <script type="text/javascript" src="//api.venyoo.ru/wnew.js?wc=venyoo/default/science&widget_id=6755342139789616"></script>
+    <script src="//cdn.callibri.ru/callibri.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 
