--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -18,7 +18,7 @@
                                     </button>
                                 </div>
                                 <div class="col-xl-6">
-                                    <a href="tel:+79184694301" class="footer__phone">8 (918) 469-43-01</a>
+                                    <a href="tel:+79184694301" class="footer__phone callibri">8 (918) 469-43-01</a>
                                     <a href="mailto:office@biotr.ru" class="footer__email">office@biotr.ru</a>
                                 </div>
                             </div>
