--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -12,13 +12,13 @@
                         </button>
                     </div>
                     <div class="col-auto">
-                        <a href="tel:+79184694301" class="header__phone">8 (918) 469-43-01</a>
+                        <a href="tel:+79184694301" class="header__phone callibri">8 (918) 469-43-01</a>
                         <a href="mailto:office@biotr.ru" class="header__email">office@biotr.ru</a>
                     </div>
                 </div>
             </div>
             <div class="col-auto d-md-none">
-                <a href="tel:+79184694301" class="d-flex">
+                <a href="tel:+79184694301" class="d-flex callibri">
                     <img src="images/header/phone-icon.svg" alt="">
                 </a>
             </div>
