--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                             </div>
                             <div class="category__links">
                                 <a href="downloads/bris-presentation.pdf" target="_blank" class="category__link" onclick="ym(71579686,'reachGoal','down_silik')">
-                                    Презентация силикагелевых стабилизаторов для сельского хозяйства
+                                    Презентация по применению силикагеля в сельском хозяйстве
                                 </a>
                                 <a href="downloads/bris-presentation-vine-and-beer.pdf" target="_blank" class="category__link" onclick="ym(71579686,'reachGoal','down_silik')">
                                     Презентация силикагелевых стабилизаторов для вина и пива
